// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocha Package transformer should work with babel config 1`] = `
Object {
  "devDependencies": Object {
    "coveralls": "^3.0.11",
    "mocha": "^7.0.0",
    "nyc": "^15.0.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "mocha",
      "coveralls",
      "nyc",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "babel",
      "mocha",
    ],
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "nyc": Object {
    "exclude": Array [
      "src/*.js src/**/*.js",
    ],
  },
  "scripts": Object {
    "cover": "nyc npm test && nyc report --reporter=html --reporter=text",
    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf ./coverage",
    "mocha": "mocha --require '@babel/register' src/*.js src/**/*.js",
    "test": "npm run mocha",
  },
}
`;

exports[`mocha Package transformer should work with some files 1`] = `
Object {
  "devDependencies": Object {
    "coveralls": "^3.0.11",
    "mocha": "^7.0.0",
    "nyc": "^15.0.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "mocha",
      "coveralls",
      "nyc",
    ],
  },
  "metapak": Object {
    "configs": Array [
      "mocha",
    ],
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "nyc": Object {
    "exclude": Array [
      "src/*.js src/**/*.js",
    ],
  },
  "scripts": Object {
    "cover": "nyc npm test && nyc report --reporter=html --reporter=text",
    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf ./coverage",
    "mocha": "mocha src/*.js src/**/*.js",
    "test": "npm run mocha",
  },
}
`;
